<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.udacity.catpoint</groupId>
	<artifactId>catpoint-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<modules>
		<module>Image</module>
		<module>Security</module>
	</modules>

	<name>catpoint-parent</name>
	<url>http://www.example.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<mockito.core.version>4.8.1</mockito.core.version>
		<mockito.junit.jupiter>4.8.1</mockito.junit.jupiter>
		<software.amazon.awssdk.region.version>2.19.8</software.amazon.awssdk.region.version>
		<software.amazon.awssdk.core.version>2.19.8</software.amazon.awssdk.core.version>
		<software.amazon.awssdk.auth.version>2.19.8</software.amazon.awssdk.auth.version>
		<software.amazon.awssdk.rekognition.version>2.19.8</software.amazon.awssdk.rekognition.version>
		<software.amazon.awssdk.aws.core.version>2.19.8</software.amazon.awssdk.aws.core.version>
		<software.amazon.awssdk.utils.version>2.19.8</software.amazon.awssdk.utils.version>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.core.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.junit.jupiter}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/regions -->
		<dependency>
    		<groupId>software.amazon.awssdk</groupId>
    		<artifactId>regions</artifactId>
    		<version>${software.amazon.awssdk.region.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/core -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>core</artifactId>
			<version>${software.amazon.awssdk.core.version}</version>
			<type>pom</type>
		</dependency>
		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/auth -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>auth</artifactId>
			<version>${software.amazon.awssdk.auth.version}</version>
			<type>pom</type>
		</dependency>
		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/rekognition -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>rekognition</artifactId>
			<version>${software.amazon.awssdk.rekognition.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/aws-core -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>aws-core</artifactId>
			<version>${software.amazon.awssdk.aws.core.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/utils -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>utils</artifactId>
			<version>${software.amazon.awssdk.utils.version}</version>
		</dependency>
	</dependencies>	

	<build>
		<pluginManagement>
			<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
			<plugins>
				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<argLine>
              				--add-opens com.udacity.catpoint.security/com.udacity.catpoint.security.service=ALL-UNNAMED
            			</argLine>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.9.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.2.0</version>
			</plugin>
		</plugins>
	</reporting>
</project>